--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd-mobile": "^2.2.14",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1"
